@@ -1,3 +1,4 @@
+Feasibility test for skipping java.library.path modification
 # 0.00.05 (53630) Jun 30, 2011
 # 0.00.04 (53629) Jun 30, 2011
 # 0.00.03 (53601) Jun 30, 2011
